Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-8540

Code completion on a "private signal" in Qt 5 results in "foo(QPrivateSignal)"

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • None
    • Qt Creator 2.6.1
    • C/C++/Obj-C++ Support
    • None
    • Any

      Change dee57bc91080740201a0bf0b8c42eb374ee696f3 in qtbase made some signals private, for example QTimer::timeout().

      To reproduce:
      Complete on:

      QTimer t;
      QObject::connect(&t, SIGNAL(t[TAB]

      which results in timeout(QPrivateSignal).

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            erikv Erik Verbruggen
            kleint Friedemann Kleint
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes